# ShuWeiCup

./: .gitignore  FINAL_METRICS_SUMMARY.md  README.md  analyze_training_history.py  create_fewshot_subset.py  dataset.py  evaluate.py  evaluation_results.csv  models.py  pyproject.toml  run_task4_eval.sh  task1train.py  task2train.py  task3train.py  task4_evaluate.py  task4train.py  train.py  trainer.py  training_final_metrics.csv  training_final_metrics_report.md  visualize_samples.py
docs/: task1_monitoring_features.md
docs/task1/: README.md
docs/task1/train/: events.out.tfevents.1763268289.autodl-container-de7842b619-684802cd.6072.0  events.out.tfevents.1763312034.autodl-container-f75c4aac4c-479fccc4.1589.0  synthetic_training_history.csv
docs/task2/: README.md
docs/task2/train/: confusion_matrix_best.csv  training_history.csv
docs/task3/train/: best_metrics.json  history.json
scripts/: README.md  data_cleaner.py  evaluate.py  task4_evaluate.py  task4_inference_demo.py
src/: README.md  __init__.py  data_structures.py  dataset.py  losses.py  trainer.py
test/: test_all.py
