[project]
name = "shuweicamp"
version = "0.1.0"
description = "Agricultural Disease Recognition System - 2025 ShuWei Cup Problem B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "timm>=0.9.12",
    "albumentations>=1.3.1",
    "opencv-python>=4.8.1",
    "pandas>=2.1.3",
    "numpy>=1.26.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "grad-cam>=1.4.8",
    "pillow>=10.1.0",
    "tensorboard>=2.15.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "ipython>=8.17.2",
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
